--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
+    "server": "supervisor server/server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "better-scroll": "^0.1.7",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
     "fastclick": "^1.0.6",
+    "jsmediatags": "^3.8.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.0.1",
     "vue-router": "^2.0.0-rc.5",
@@ -42,7 +48,6 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
