--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "fastclick": "^1.0.6",
+    "http-errors": "^1.7.1",
     "jsmediatags": "^3.8.1",
+    "morgan": "^1.9.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.0.1",
     "vue-router": "^2.0.0-rc.5",
