--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@createjs/easeljs": "^2.0.0-beta.4",
     "axios": "^0.18.0",
     "better-scroll": "^0.1.7",
     "body-parser": "^1.18.3",
